app/src/main/java/com/example/filmatory/errors/BaseError.kt
package com.example.filmatory.errors

class BaseError(name: String,) : Error() {

}